# partial_http_server

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yaml  generate_www_root.sh  housework.md  main.py  pyproject.toml  setup.py
server/: __init__.py  handler.py  httpd.py
